--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,11 @@ main {
 
 .editable-board {
     background: linear-gradient(145deg, var(--board-bg-dark), var(--board-bg-light)) !important;
+    touch-action: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .tile {
